@@ -6,8 +6,17 @@
   `pip install git+git://github.com/biolink/kgx`
 
 ### 3. Follow Instruction from [the runNER repo](https://github.com/deepakunni3/runner)
-  - [Ontology to KGX TSV](https://github.com/deepakunni3/runner#ontology-to-kgx-tsv)
+  - [Ontology conversion from JSON to TSV via KGX](https://github.com/deepakunni3/runner#ontology-to-kgx-tsv)
+    - In case of the unavailability of JSON format, we can convert an OWL to JSON via [ROBOT](http://robot.obolibrary.org/).</br>
+      `robot convert --input input/ncbitaxon.owl --output input/ncbitaxon.json -f json`
+    - ROBOT may throw errors during conversion which are addressed [here](http://robot.obolibrary.org/errors.html).
+    - If JAVA options need to be declared, [here](https://docs.oracle.com/html/E23737_01/configuring_jvm.htm) is a list. </br>
+    `export ROBOT_JAVA_ARGS = <java_options> && robot convert ...` </br>
+    For e.g. while converting NCBITaxon.owl to a JSON file, there were 'java heap out of space' and 'garbage collection' errors. The following worked: </br>
+    `export ROBOT_JAVA_ARGS="-Xmx8g -XX:+UseConcMarkSweepGC" && robot convert --input input/ncbitaxon.owl --output input/ncbitaxon.json -f json`
+    - Rather than running `export ROBOT_JAVA_ARGS="-Xmx8g -XX:+UseConcMarkSweepGC"` repeatedly, we could declare this in ~/.bash_profile directly and take care of it once and for all.
   - [Preparing term-list](https://github.com/deepakunni3/runner#preparing-term-list)
+  
 
 ### 4. Install OGER
   `pip install git+git://github.com/OntoGene/OGER`
